[gd_scene load_steps=2 format=3 uid="uid://uxybhxts4bor"]

[ext_resource type="Script" uid="uid://4i6ux0mjeryd" path="res://gui/debug/development_debugging_window.gd" id="1_s0sks"]

[node name="DevelopmentDebuggingWindow" type="Window"]
oversampling_override = 1.0
title = "Development Debugging Window"
initial_position = 1
size = Vector2i(800, 600)
min_size = Vector2i(600, 400)
script = ExtResource("1_s0sks")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="HSplitContainer" type="HSplitContainer" parent="MarginContainer"]
layout_mode = 2

[node name="LeftPanel" type="VBoxContainer" parent="MarginContainer/HSplitContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="LeftHeader" type="Label" parent="MarginContainer/HSplitContainer/LeftPanel"]
layout_mode = 2
text = "Objects"
horizontal_alignment = 1

[node name="ObjectList" type="ItemList" parent="MarginContainer/HSplitContainer/LeftPanel"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="RightPanel" type="VBoxContainer" parent="MarginContainer/HSplitContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="HeaderContainer" type="VBoxContainer" parent="MarginContainer/HSplitContainer/RightPanel"]
layout_mode = 2

[node name="IDLabel" type="Label" parent="MarginContainer/HSplitContainer/RightPanel/HeaderContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "ID: -"

[node name="TypeLabel" type="Label" parent="MarginContainer/HSplitContainer/RightPanel/HeaderContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Type: -"

[node name="StructureLabel" type="Label" parent="MarginContainer/HSplitContainer/RightPanel/HeaderContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Structure: -"

[node name="Separator1" type="HSeparator" parent="MarginContainer/HSplitContainer/RightPanel"]
layout_mode = 2

[node name="TraitsContainer" type="VBoxContainer" parent="MarginContainer/HSplitContainer/RightPanel"]
layout_mode = 2

[node name="TraitsHeader" type="Label" parent="MarginContainer/HSplitContainer/RightPanel/TraitsContainer"]
layout_mode = 2
text = "Traits:"

[node name="TraitsLabel" type="Label" parent="MarginContainer/HSplitContainer/RightPanel/TraitsContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "-"

[node name="Separator2" type="HSeparator" parent="MarginContainer/HSplitContainer/RightPanel"]
layout_mode = 2

[node name="AttributesContainer" type="VBoxContainer" parent="MarginContainer/HSplitContainer/RightPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="AttributesHeader" type="Label" parent="MarginContainer/HSplitContainer/RightPanel/AttributesContainer"]
layout_mode = 2
text = "Attributes:"

[node name="AttributeTree" type="Tree" parent="MarginContainer/HSplitContainer/RightPanel/AttributesContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
columns = 2
hide_root = true

[connection signal="item_selected" from="MarginContainer/HSplitContainer/LeftPanel/ObjectList" to="." method="_on_object_list_item_selected"]
